---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: ????
  Info:
    - Subtract paid out items from the signals
    - Avoid hovering it looking batshit crazy
    - Make the upcycle payout configurable
    - Emulate products finished
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2024. 10. 22
  Info:
    - Fail to dispense the quality items (furnace output cannot hold non-output)
    - Attempt to get around it by making every product valid
    - Fail at debugging a crash
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2024. 10. 22
  Info:
    - Place linked chest on rotated chomper tile
    - Place chest in the right spot when mirrored too
    - Define custom linked chest prototype
    - Upcycler description
    - Remove input chest when upcycler goes away
    - Setup the hidden entities when placing an upcycler
    - Clean up all the entities when the upcycler goes away
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2024. 10. 22
  Info:
    - Create data.lua
    - Setup the entity, item & recipe, and hide quality modules
    - Load the recolored sprites
    - Change what can go into the upcycler
    - Make the upcycler run continuously
    - Disable the large smoke
    - 〃
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 10. 22
  Info:
    - Initial commit