@@ -6,6 +6,7 @@ Date: ????
     - Avoid hovering it looking batshit crazy
     - Make the upcycle payout configurable
     - Emulate products finished
+    - Spill contained items upon upcycler removal
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.4
 Date: 2024. 10. 22
